day1/network_policy/calico/allow-fs-bs.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-checkout
  namespace: team-api
spec:
  podSelector:
    matchLabels:
      role: checkout
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: team-ui
    - podSelector:
        matchLabels:
          role: frontend
  policyTypes:
  - Ingress
