day1/network_policy/calico/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: team-api
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
